[tool.poetry]
name = "recipe-management-api"
version = "0.1.0"
description = "an API that will help guide recipe choices"
authors = ["Ikechukwu-Christian <christainekwueme23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pytest = "^8.1.1"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
